# PyTorchBench

./: .gitignore  README.ru.md  config.yaml  main.py  pyproject.toml
src/: __init__.py
src/config/: __init__.py  additional_schemas.py  base_schemas.py  experiment.py
src/data/: __init__.py  datasets.py
src/models/: __init__.py  utils.py
src/training/: __init__.py  engine.py  metrics.py  test.py  train.py
src/utils/: __init__.py  general.py  logger.py
tests/: conftest.py
tests/test_config/: test_additional_schemas.py  test_base_schemas.py  test_experiment.py
tests/test_models/: test_utils.py~
tests/test_training/: conftest.py  test_engine.py  test_test.py  test_train.py
tests/test_utils/: test_general.py  test_logger.py
